# alien_shooter_ncurses_cpp

./: CMakeLists.txt  README.md
src/: alien.cpp  alien.hpp  bullet.cpp  bullet.hpp  game.cpp  game.hpp  main.cpp  pickup.cpp  pickup.hpp  player.cpp  player.hpp  renderer.cpp  renderer.hpp  types.hpp
